src/components/Dropdown/Dropdown.module.scss
.container {
    position: relative;
    z-index: 100;

    .button {
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }

    .menu {
        position: absolute;
        top: 200%;
        right: 0;
        background-color: var(--background-element);
        border-radius: 0.75rem;
        visibility: hidden;
        opacity: 0;
        pointer-events: none;
        transition: .3s;
        cursor: default;

        &.active {
            top: 130%;
            visibility: visible;
            opacity: 1;
            pointer-events: all;
        }
    }
}

